fix: update mvp flow
